First stab on the css for the site

--- a/css/global.css
+++ b/css/global.css
@@ -1,2 +1,89 @@
 /* This file will hold styles for the mobile version of your website (mobile first). */
 /* This also can include ANY global CSS that applies site-wide. Unless overwritten by a more specific style rule, CSS declarations in global.css will apply site-wide. */
+
+body {
+  font-family: Arial Narrow, Arial, Sans serif;
+  font-size: 85%;
+  color: #666666;
+  text-align: right;
+}
+
+p {
+  margin-bottom: 0.5em;
+}
+
+h1.title {
+  display: none;
+}
+
+h1.site-name, h2.site-name {
+  font-weight: 200;
+  text-align: right;
+  font-size: 40px;
+}
+
+h1.site-name a, h2.site-name a {
+  text-decoration: none;
+  color: black;
+}
+
+div.field-name-body {
+  margin-top: 2em;
+  text-align: right;
+}
+
+#block-system-main-menu {
+  margin-top: 30px;
+}
+
+#block-system-main-menu ul.menu {
+  list-style-type: none !important;
+}
+
+#block-system-main-menu ul.menu li {
+  list-style-image: none !important;
+  list-style-type: none;
+}
+
+li.expanded {
+  font-weight: bold;
+  font-color: black;
+}
+
+li.expanded a {
+  font-color: black;
+  text-decoration: none;
+}
+
+li.leaf {
+  font-weight: normal;
+  margin-left: 2em;
+}
+
+li a {
+  color: black;
+}
+
+li.leaf  a {
+  text-decoration: none;
+  color: #bbb;
+}
+
+li a:hover {
+  text-decoration: underline;
+  color: black;
+}
+
+li.last {
+  margin-bottom: 15px !important;
+}
+
+li a.active {
+  color: #d3c600;
+}
+
+img {
+  margin-bottom: 15px;
+}
+
+
