--- a/css/global.css
+++ b/css/global.css
@@ -18,7 +18,7 @@ h1.title {
 
 h1.site-name, h2.site-name {
   font-weight: 200;
-  text-align: right;
+  text-align: left;
   font-size: 40px;
 }
 
