--- a/css/global.css
+++ b/css/global.css
@@ -90,6 +90,6 @@ img.adaptive-image {
 }
 
 div#block-views-depping-news-block li {
-	padding: 0 0 20px 0;
+	padding: 20px 0 20px 0;
 	border-bottom: 1px solid #ccc;
 }
